data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_49.wast
;; 10. **Test Description**: Develop a `block` containing a `br_table` where indices reference blocks declared with different types. This will check for type consistency across branching instructions and validate index-type relationships.     - **Constraint Checked**: Consistency in handling type relationships across varied `br_table` index targets.

(assert_invalid
  (module (func $type-br_table-mismatch
    (block (result i32)
      (block (result f32) 
        (i32.const 0)
        (br_table 0 1 (i32.const 0))
      )
    )
  ))
  "type mismatch"
)